feat: add articles link in main nav

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       <button class="nav-btn" data-panel="summary" aria-label="Aller à la page Résumé">
         Résumé
       </button>
+      <a class="nav-btn" href="/articles.html" aria-label="Lire les articles">
+        Articles
+      </a>
     </nav>
     
     <!-- Message de status global -->
