--- a/articles.html
+++ b/articles.html
@@ -34,6 +34,30 @@
             -webkit-font-smoothing: antialiased;
         }
 
+        /* ═══ BACK NAV ═══ */
+        .back-nav {
+            display: flex;
+            gap: 8px;
+            border-bottom: 1px solid var(--color-border);
+            margin-bottom: 0;
+        }
+        .back-nav .nav-btn {
+            padding: 16px;
+            background: none;
+            border: none;
+            border-bottom: 2px solid transparent;
+            color: var(--color-text-muted);
+            font-size: 16px;
+            font-family: var(--font-family);
+            text-decoration: none;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+        .back-nav .nav-btn:hover {
+            color: var(--color-text);
+            background: rgba(224, 156, 138, 0.05);
+        }
+
         /* ═══ HEADER ═══ */
         .header {
             text-align: center;
@@ -436,6 +460,11 @@
     </style>
 </head>
 <body>
+
+    <!-- BACK NAV -->
+    <nav class="back-nav" role="navigation" aria-label="Retour à l'application">
+        <a class="nav-btn" href="/">← Boussole</a>
+    </nav>
 
     <!-- HEADER -->
     <div class="header">
