fix: align articles header structure with index.html

--- a/articles.html
+++ b/articles.html
@@ -65,6 +65,21 @@
             font-weight: 600;
         }
 
+        /* ═══ HEADER ═══ */
+        .header {
+            text-align: center;
+            padding: 24px 0;
+        }
+        .header h1 {
+            font-size: 24px;
+            font-weight: 700;
+            margin-bottom: 4px;
+        }
+        .header p {
+            font-size: 14px;
+            color: var(--color-text-muted);
+        }
+
         /* ═══ BARRE INSCRIT ═══ */
         .subscriber-bar {
             display: none;
@@ -445,6 +460,12 @@
     </style>
 </head>
 <body>
+
+    <!-- HEADER -->
+    <header class="header">
+        <h1>Articles</h1>
+        <p>La science au service de votre santé</p>
+    </header>
 
     <!-- NAVIGATION -->
     <nav class="nav" role="navigation">
