fix: align top spacing with index.html

--- a/articles.html
+++ b/articles.html
@@ -30,7 +30,7 @@
             color: var(--color-text);
             max-width: 680px;
             margin: 0 auto;
-            padding: 0 16px;
+            padding: 16px;
             -webkit-font-smoothing: antialiased;
         }
 
