fix: white background on article reader content

--- a/articles.html
+++ b/articles.html
@@ -285,7 +285,7 @@
         .overlay {
             position: fixed;
             inset: 0;
-            background: var(--color-bg);
+            background: #ffffff;
             z-index: 100;
             overflow-y: auto;
             transform: translateY(100%);
@@ -351,9 +351,10 @@
             background: linear-gradient(135deg, var(--color-primary-light), #ffe8d6);
         }
         .article-body {
-            padding: 24px 16px;
+            padding: 24px 20px 48px;
             max-width: 680px;
             margin: 0 auto;
+            background: #ffffff;
         }
         .article-meta {
             display: flex;
