fix: align articles header with Boussole brand

--- a/articles.html
+++ b/articles.html
@@ -531,7 +531,7 @@
 
     <!-- HEADER -->
     <header class="header">
-        <h1>Articles</h1>
+        <h1>Boussole</h1>
         <p>La science au service de votre santé</p>
     </header>
 
