--- a/articles.html
+++ b/articles.html
@@ -47,7 +47,7 @@
             padding: 24px 0;
         }
         .header h1 {
-            font-family: var(--font-serif);
+            font-family: var(--font-body);
             font-size: 24px;
             font-weight: 600;
             margin-bottom: 4px;
