fix: use styles.css instead of Google Fonts, align with index.html

--- a/articles.html
+++ b/articles.html
@@ -6,9 +6,8 @@
     <title>Articles — Boussole</title>
     <meta name="theme-color" content="#e09c8a">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;1,400&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="stylesheet" href="/styles.css">
     <style>
         :root {
             --color-primary: #e09c8a;
